@@ -14,6 +14,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/jobs")
@@ -60,7 +61,7 @@ public class JobController {
         List<JobResponse> jobs = jobService.getJobsForEmployer(authentication.getName())
                 .stream()
                 .map(JobResponse::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(jobs);
     }
 }
